--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </section>
 
           <!-- Signup Section -->
-          <section id="signup" class="signup-section" style="background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("img/bg-signup.jpg");">
+          <section id="signup" class="signup-section">
                <div class="container">
                     <div class="row">
                          <div class="col-md-10 col-lg-8 mx-auto text-center">
